fixed css for images so that it will not overflow to the right

--- a/_sass/additional-styles.scss
+++ b/_sass/additional-styles.scss
@@ -26,6 +26,10 @@ p a, a {
     text-decoration: none;
 }
 
+img {
+    max-width: 100%;
+}
+
 
 /*
  * Messages
@@ -60,4 +64,3 @@ p a, a {
     margin-right: 15px;
     margin-bottom: 15px;
 }
-  
